--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -114,7 +114,10 @@
     <Compile Include="Impl\PositionService.cs" />
     <Compile Include="Impl\SourceService.cs" />
     <Compile Include="Impl\UserSession.cs" />
+    <Compile Include="IUploadService.cs" />
     <Compile Include="IValidatedResponse.cs" />
+    <Compile Include="Positions\AddCandidateRequest.cs" />
+    <Compile Include="Positions\AddCandidateResponse.cs" />
     <Compile Include="Positions\NewCandidateRequest.cs" />
     <Compile Include="Positions\NewCandidateResponse.cs" />
     <Compile Include="Positions\CandidateStatusDetails.cs" />
