--- a/HiringManager.Web/Web.config
+++ b/HiringManager.Web/Web.config
@@ -48,8 +48,14 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
+  <location path="App_Upload">
+    <system.webServer>
+      <handlers accessPolicy="Read" />
+    </system.webServer>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
