--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Candidates\QueryCandidatesRequest.cs" />
     <Compile Include="Candidates\SaveCandidateRequest.cs" />
     <Compile Include="ContactInfoDetails.cs" />
+    <Compile Include="FileDownload.cs" />
     <Compile Include="Impl\CandidateService.cs" />
     <Compile Include="Impl\DomainServiceBase.cs" />
     <Compile Include="Impl\IUnitOfWork.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="IValidatedResponse.cs" />
     <Compile Include="Positions\AddCandidateRequest.cs" />
     <Compile Include="Positions\AddCandidateResponse.cs" />
+    <Compile Include="Positions\DocumentDetails.cs" />
     <Compile Include="Positions\NewCandidateRequest.cs" />
     <Compile Include="Positions\NewCandidateResponse.cs" />
     <Compile Include="Positions\CandidateStatusDetails.cs" />
