#28, adding unit and integration tests to highlight the bug.

--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -104,6 +104,7 @@
     <Compile Include="AutoMapperProfiles\DomainProfile.cs" />
     <Compile Include="Candidates\CandidateDetails.cs" />
     <Compile Include="Candidates\CandidateSummary.cs" />
+    <Compile Include="Candidates\DocumentItem.cs" />
     <Compile Include="Candidates\ICandidateService.cs" />
     <Compile Include="Candidates\QueryCandidatesRequest.cs" />
     <Compile Include="Candidates\SaveCandidateRequest.cs" />
