--- a/HiringManager.Web.Integration.Tests/packages.config
+++ b/HiringManager.Web.Integration.Tests/packages.config
@@ -3,13 +3,14 @@
   <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="NSubstitute" version="1.7.2.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Simple.Validation" version="0.7.1" targetFramework="net451" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
