--- a/IntegrationTestHelpers/packages.config
+++ b/IntegrationTestHelpers/packages.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
+  <package id="NSubstitute" version="1.7.2.0" targetFramework="net451" />
+  <package id="NUnit" version="2.6.3" targetFramework="net451" />
+  <package id="SpecFlow" version="1.9.0" targetFramework="net451" />
 </packages>
