--- a/HiringManager.Web.Integration.Tests/App.config
+++ b/HiringManager.Web.Integration.Tests/App.config
@@ -16,6 +16,19 @@
     <add name="HiringManager.EntityFramework.HiringManagerDbContext" connectionString="Data Source=.;Initial Catalog=HiringManagerIntegrationDb;Integrated Security=True" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
+  <system.diagnostics>
+    <switches>
+      <!-- This switch controls data messages. In order to receive data 
+         trace messages, change value="0" to value="1" -->
+      <add name="DataMessagesSwitch" value="0" />
+      <!-- This switch controls general messages. In order to 
+         receive general trace messages change the value to the 
+         appropriate level. "1" gives error messages, "2" gives errors 
+         and warnings, "3" gives more detailed error information, and 
+         "4" gives verbose trace information -->
+      <add name="TraceLevelSwitch" value="0" />
+    </switches>
+  </system.diagnostics>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
