--- a/HiringManager.EntityModel.UnitTests/HiringManager.EntityModel.UnitTests.csproj
+++ b/HiringManager.EntityModel.UnitTests/HiringManager.EntityModel.UnitTests.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CandidateStatusDetailsEntityTests.cs" />
     <Compile Include="PositionEntityTests.cs" />
     <Compile Include="PositionSpecificationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
