--- a/HiringManager.Web/Web.config
+++ b/HiringManager.Web/Web.config
@@ -15,10 +15,7 @@
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=HiringManagerAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="HiringManager.EntityFramework.HiringManagerDbContext" connectionString="Data Source=.;Initial Catalog=HiringManagerDb;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config"></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
