--- a/HiringManager.Web/connectionStrings.config
+++ b/HiringManager.Web/connectionStrings.config
@@ -1,4 +1,4 @@
 ﻿<connectionStrings>
-  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\AspNetAuth.mdf;Initial Catalog=AspNetAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="HiringManager.EntityFramework.Repository" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\HiringManager.EntityFramework.Repository.mdf;Initial Catalog=HiringManager.EntityFramework.Repository;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=HiringManagerAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="HiringManager.EntityFramework.HiringManagerDbContext" connectionString="Data Source=.;Initial Catalog=HiringManagerDb;Integrated Security=True" providerName="System.Data.SqlClient" />
 </connectionStrings>
