--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net451" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net451" />
   <package id="Isg.Specification" version="0.1" targetFramework="net451" />
   <package id="jQuery" version="2.0.3" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net451" />
