--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -107,7 +107,9 @@
     <Compile Include="Candidates\ICandidateService.cs" />
     <Compile Include="Candidates\QueryCandidatesRequest.cs" />
     <Compile Include="Candidates\SaveCandidateRequest.cs" />
+    <Compile Include="Candidates\UploadDocumentRequest.cs" />
     <Compile Include="ContactInfoDetails.cs" />
+    <Compile Include="DocumentDetails.cs" />
     <Compile Include="FileDownload.cs" />
     <Compile Include="Impl\CandidateService.cs" />
     <Compile Include="Impl\DomainServiceBase.cs" />
@@ -119,7 +121,6 @@
     <Compile Include="IValidatedResponse.cs" />
     <Compile Include="Positions\AddCandidateRequest.cs" />
     <Compile Include="Positions\AddCandidateResponse.cs" />
-    <Compile Include="Positions\DocumentDetails.cs" />
     <Compile Include="Positions\NewCandidateRequest.cs" />
     <Compile Include="Positions\NewCandidateResponse.cs" />
     <Compile Include="Positions\CandidateStatusDetails.cs" />
