--- a/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
+++ b/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Candidates\CandidateDetailsViewModel.cs" />
     <Compile Include="Candidates\EditCandidateViewModel.cs" />
+    <Compile Include="Candidates\UploadDocumentViewModel.cs" />
     <Compile Include="ContactInfoViewModel.cs" />
     <Compile Include="IndexViewModel.cs" />
     <Compile Include="Positions\AddCandidateViewModel.cs" />
