--- a/HiringManager.DomainServices.Transactions/HiringManager.DomainServices.Transactions.csproj
+++ b/HiringManager.DomainServices.Transactions/HiringManager.DomainServices.Transactions.csproj
@@ -61,14 +61,20 @@
   <ItemGroup>
     <Compile Include="AddExistingCandidateToPosition.cs" />
     <Compile Include="AddNewCandidateToPosition.cs" />
+    <Compile Include="CandidateService.cs" />
     <Compile Include="ClosePosition.cs" />
     <Compile Include="CreatePosition.cs" />
     <Compile Include="DeleteDocument.cs" />
+    <Compile Include="DomainServiceBase.cs" />
     <Compile Include="HireCandidate.cs" />
+    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="PositionService.cs" />
     <Compile Include="SetCandidateStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPositions.cs" />
+    <Compile Include="SourceService.cs" />
     <Compile Include="UploadDocument.cs" />
+    <Compile Include="UserSession.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HiringManager.DomainServices\HiringManager.DomainServices.csproj">
