--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -114,12 +114,6 @@
     <Compile Include="ContactInfoDetails.cs" />
     <Compile Include="DocumentDetails.cs" />
     <Compile Include="FileDownload.cs" />
-    <Compile Include="Impl\CandidateService.cs" />
-    <Compile Include="Impl\DomainServiceBase.cs" />
-    <Compile Include="Impl\IUnitOfWork.cs" />
-    <Compile Include="Impl\PositionService.cs" />
-    <Compile Include="Impl\SourceService.cs" />
-    <Compile Include="Impl\UserSession.cs" />
     <Compile Include="IUploadService.cs" />
     <Compile Include="IValidatedResponse.cs" />
     <Compile Include="Positions\AddCandidateRequest.cs" />
@@ -137,7 +131,6 @@
     <Compile Include="Positions\QueryPositionSummariesRequest.cs" />
     <Compile Include="Positions\SetCandidateStatusRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Impl\UserManager.cs" />
     <Compile Include="Sources\ISourceService.cs" />
     <Compile Include="Sources\QuerySourcesRequest.cs" />
     <Compile Include="Sources\SourceSummary.cs" />
@@ -157,6 +150,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
