--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -8,6 +8,10 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net451" />
   <package id="Glimpse" version="1.8.6" targetFramework="net451" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net451" />
+  <package id="Glimpse.AspNet" version="1.9.1" targetFramework="net451" />
+  <package id="Glimpse.EF6" version="1.6.4" targetFramework="net451" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="Isg.Specification" version="0.1" targetFramework="net451" />
   <package id="jQuery" version="2.0.3" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net451" />
