--- a/HiringManager.EntityModel/HiringManager.EntityModel.csproj
+++ b/HiringManager.EntityModel/HiringManager.EntityModel.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ContactInfo.cs" />
     <Compile Include="Document.cs" />
     <Compile Include="Manager.cs" />
+    <Compile Include="Note.cs" />
     <Compile Include="Opening.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
