--- a/HiringManager.DomainServices/HiringManager.DomainServices.csproj
+++ b/HiringManager.DomainServices/HiringManager.DomainServices.csproj
@@ -105,8 +105,10 @@
     <Compile Include="Authentication\IUserManager.cs" />
     <Compile Include="Authentication\IUserSession.cs" />
     <Compile Include="AutoMapperProfiles\DomainProfile.cs" />
+    <Compile Include="Candidates\AddNoteRequest.cs" />
     <Compile Include="Candidates\CandidateDetails.cs" />
     <Compile Include="Candidates\CandidateSummary.cs" />
+    <Compile Include="Candidates\EditNoteRequest.cs" />
     <Compile Include="Candidates\ICandidateService.cs" />
     <Compile Include="Candidates\QueryCandidatesRequest.cs" />
     <Compile Include="Candidates\SaveCandidateRequest.cs" />
