--- a/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
+++ b/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
@@ -72,8 +72,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Candidates\AddNoteViewModel.cs" />
     <Compile Include="Candidates\CandidateDetailsViewModel.cs" />
     <Compile Include="Candidates\DeleteDocumentViewModel.cs" />
+    <Compile Include="Candidates\DeleteNoteViewModel.cs" />
     <Compile Include="Candidates\EditCandidateViewModel.cs" />
     <Compile Include="Candidates\UploadDocumentViewModel.cs" />
     <Compile Include="ContactInfoViewModel.cs" />
