--- a/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
+++ b/HiringManager.Web.ViewModels/HiringManager.Web.ViewModels.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Candidates\DeleteNoteViewModel.cs" />
     <Compile Include="Candidates\EditCandidateViewModel.cs" />
     <Compile Include="Candidates\NoteDetails.cs" />
+    <Compile Include="Candidates\NoteViewModel.cs" />
     <Compile Include="Candidates\QueryNotesRequest.cs" />
     <Compile Include="Candidates\UploadDocumentViewModel.cs" />
     <Compile Include="ContactInfoViewModel.cs" />
